--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ async function loadStations() {
     if (savedCorsProxy !== null && savedCorsProxy.trim() !== '') {
       corsproxyInput.value = savedCorsProxy.trim();
     } else {
-      corsproxyInput.value = 'https://cors-anywhere.herokuapp.com/';
+      corsproxyInput.value = 'https://cors-anywhere-agfr.onrender.com/';
     }
 
   errorMsg.textContent = '';
