--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ let pollenData = null;
 let selectedPollens = new Set();
 let contaminationDates = [];
 let asthmaticRiskData = [];
-let showAsthmaticRisk = true;
+let showAsthmaticRisk = false;
 
 const STORAGE_KEY_STATION = 'selectedStationId';
 const STORAGE_KEY_TIMERANGE = 'selectedTimeRangeHours';
