--- a/index.html
+++ b/index.html
@@ -328,20 +328,24 @@
         });
 
         const contaminationDatasets = pollenData?.contamination?.filter(p => selectedPollens.has(String(p.poll_id))).map(p => ({
-          label: p.poll_title,
-          data: mapDailyToHourly([p.contamination_1 ?? 0, p.contamination_2 ?? 0, p.contamination_3 ?? 0, p.contamination_4 ?? 0], 4),
-          backgroundColor: utils.randomColorForId(p.poll_id, 0.6),
-          borderColor: utils.randomColorForId(p.poll_id, 1),
-          stack: 'pollen',
-          type: 'bar',
-          yAxisID: 'yPollen',
-          borderWidth: 1.5,
-          hoverBackgroundColor: utils.randomColorForId(p.poll_id, 0.8),
-          hoverBorderWidth: 2,
-          hoverBorderColor: utils.randomColorForId(p.poll_id, 1),
-          barPercentage: 0.8,
-          categoryPercentage: 0.9
-        })) || [];
+            label: p.poll_title,
+            data: mapDailyToHourly([p.contamination_1 ?? 0, p.contamination_2 ?? 0, p.contamination_3 ?? 0, p.contamination_4 ?? 0], 4),
+            backgroundColor: utils.randomColorForId(p.poll_id, 0.2),
+            borderColor: utils.randomColorForId(p.poll_id, 0.9),
+            type: 'line',
+            fill: true,
+            tension: 0.4,
+            pointRadius: 3,
+            pointHoverRadius: 5,
+            pointBackgroundColor: utils.randomColorForId(p.poll_id, 1),
+            pointBorderColor: utils.randomColorForId(p.poll_id, 1),
+            pointBorderWidth: 1,
+            borderWidth: 2,
+            yAxisID: 'yPollen',
+            spanGaps: true,
+            order: 4
+            })) || [];
+
 
         const datasets = [
           {
@@ -381,24 +385,24 @@
         ];
 
         if (showAsthmaticRisk) {
-          datasets.push({
+        datasets.push({
             label: 'Asthmatic Risk',
             data: mapDailyToHourly(asthmaticRiskData, asthmaticRiskData.length),
-            borderColor: 'rgba(255, 165, 0, 0.9)',
-            backgroundColor: 'rgba(255, 165, 0, 0.2)',
+            borderColor: 'rgba(0, 102, 204, 0.9)',
+            backgroundColor: 'rgba(0, 102, 204, 0.2)',
             yAxisID: 'yAsthma',
             type: 'line',
             fill: false,
             tension: 0.4,
             pointRadius: 4,
             pointHoverRadius: 6,
-            pointBackgroundColor: 'rgba(255, 165, 0, 1)',
-            pointBorderColor: 'rgba(255, 165, 0, 1)',
+            pointBackgroundColor: 'rgba(0, 102, 204, 1)',
+            pointBorderColor: 'rgba(0, 102, 204, 1)',
             pointBorderWidth: 1.5,
             borderWidth: 2.5,
             spanGaps: true,
             order: 2
-          });
+        });
         }
 
         const now = new Date(), annotations = {};
@@ -457,7 +461,7 @@
               yTemp: { position: 'left', title: { display: true, text: 'Temperature (°C)', font: { size: 14, weight: 'bold' }, color: '#333' }, suggestedMin: 0, suggestedMax: 40, grid: { drawOnChartArea: true, color: 'rgba(0, 0, 0, 0.05)', lineWidth: 1 }, ticks: { stepSize: 5, font: { size: 11 }, color: '#555' } },
               yRain: { position: 'right', title: { display: true, text: 'Rainfall (mm)', font: { size: 14, weight: 'bold' }, color: '#333' }, grid: { drawOnChartArea: false, color: 'rgba(0, 0, 0, 0.05)' }, min: 0, max: 15, ticks: { stepSize: 3, font: { size: 11 }, color: '#555' } },
               yPollen: { position: 'right', offset: true, title: { display: true, text: 'Pollen Contamination (0-4)', font: { size: 14, weight: 'bold' }, color: '#333' }, grid: { drawOnChartArea: false, color: 'rgba(0, 0, 0, 0.05)' }, min: 0, max: 4, ticks: { stepSize: 1, font: { size: 11 }, color: '#555' }, type: 'linear' },
-              yAsthma: { position: 'left', offset: true, title: { display: showAsthmaticRisk, text: 'Asthmatic Risk (1-4)', font: { size: 14, weight: 'bold' }, color: '#333' }, grid: { drawOnChartArea: false, color: 'rgba(0, 0, 0, 0.05)' }, min: 1, max: 5, ticks: { stepSize: 1, font: { size: 11 }, color: '#555' }, type: 'linear', display: showAsthmaticRisk }
+              yAsthma: { position: 'left', offset: true, title: { display: showAsthmaticRisk, text: 'Asthmatic Risk (1-5)', font: { size: 14, weight: 'bold' }, color: '#333' }, grid: { drawOnChartArea: false, color: 'rgba(0, 0, 0, 0.05)' }, min: 1, max: 5, ticks: { stepSize: 1, font: { size: 11 }, color: '#555' }, type: 'linear', display: showAsthmaticRisk }
             },
             plugins: {
               legend: { display: true, position: 'top', align: 'center', maxHeight: 30, labels: { font: { size: 12 }, color: '#333', padding: 15, boxWidth: 20, usePointStyle: true } },
