--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
       startRefresh: () => {
         if (refreshIntervalId) clearInterval(refreshIntervalId);
         core.fetchAndUpdateData();
-        refreshIntervalId = setInterval(core.fetchAndUpdateData, 300000);
+        refreshIntervalId = setInterval(core.fetchAndUpdateData, 900000); // 15 minutes
       },
       findNearestStation: position => {
         const { latitude: userLat, longitude: userLon } = position.coords;
